--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Hello! From HTML!</title>
   </head>
   <body>
-    <div id="login-form">
-      <input type="text" placeholder="What is your name?" />
-      <button>Log in </button>
-    </div>
+    <form id="login-form">
+      <input required maxlength="15" type="text" placeholder="What is your name?" />
+      <input type="submit" value="Log In" />
+    </form>
     <script src="app.js"></script>
   </body>
 </html>
